src/pages/Client/Landing/components/Courses/components/Course/course.module.css
/** @format */

.card {
  cursor: pointer;
  border-radius: 0.5rem;
}

.content {
  padding: 0.75rem;
}

.imgWrap {
  position: relative;
  width: 100%;
  height: 15.625rem;
}

.img {
  border-radius: 0.5rem;
  min-width: 12.75rem;
  width: 100%;
  height: 100%;
  clip-path: inset(0 0 0 0);
  transition: all 0.2s;
}

.control {
  position: absolute;
  bottom: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  visibility: hidden;
  transform: translateY(50%) scale(0);
  transition: all 0.2s;
  transition-delay: 0.2s;
}

.card:hover img {
  clip-path: inset(0 0 40% 0);
}

.card:hover .control {
  opacity: 1;
  visibility: visible;
  transform: translateY(0) scale(1);
}

.button {
  width: 100%;
}

.wish {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--success);
  border: 1px solid var(--success);
  margin-top: 0.75rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  cursor: pointer;
}
.wish.wished {
  background-color: var(--success);
  color: var(--white);
}
.wish:hover {
  background-color: var(--success);
  color: var(--white);
}

.cart,
.heart {
  width: 20px;
  height: 20px;
  margin-right: 0.5rem;
}

.courseDetail {
  display: none;
}

.name {
  min-height: 2.8125rem;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: normal;
}

.author {
  margin: 0.5rem 0 0.25rem 0;
}

@media (min-width: 768px) {
  .card {
    margin: 0.875rem;
  }
}

